test/domains/compilerErrors/notsupportedParsafe-DR.chpl
use notsupportedCommon;

writeln(dfltRectangularBase.parSafe);
