test/domains/compilerErrors/notsupportedParsafe-DR.good
notsupportedParsafe-DR.chpl:3: error: this domain type does not support 'parSafe'
